# docmodel

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/docmodel/: __init__.py  docmodel.py  example.py  exceptions.py  fields.py  texttools.py  urls.py
